--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,7 +27,8 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		"src/types/"
+		"src/types/",
+		"src/app/temp2"
 	],
 	"exclude": ["node_modules"]
 }
